# crafting-interpreters

./: .gitignore
chapter 1/challenge 1/: answer.txt
chapter 1/challenge 3/: CMakeLists.txt  double-link-list.c  double-link-list.h  main.c  test
chapter 1/challenge 3/src/: double-link-list.c  main.c
chapter 10/: grammar.txt  lox-gen.sh
chapter 10/lox/: Expr.java  Interpreter.java  Lox.java  Parser.java  Stmt.java
chapter 10/test-scripts/: thrice.lox
chapter 10/tool/: GenerateAst.java
chapter 11/lox/: Environment.java  Lox.java  Parser.java  TokenType.java
chapter 11/test-scripts/: fib.lox
chapter 11/tool/: GenerateAst.java
chapter 12/: tags
chapter 12/lox/: Expr.java  Interpreter.java  Return.java
chapter 12/test-scripts/: class-with-method.lox  closure-test.lox  closure.lox  functions.lox  inheritance.lox
chapter 13/lox/: Interpreter.java  LoxFunction.java  LoxInstance.java  Resolver.java  Stmt.java
chapter 13/test-scripts/: cake.lox
chapter 13/tool/: GenerateAst.java
chapter 2/lox/: Lox.java  Scanner.java
chapter 5/: grammar.txt
chapter 5/lox/: Expr.java
chapter 6/lox/: AstPrinter.java  Expr.java  Lox.java  Parser.java  Token.java
chapter 7/lox/: Interpreter.java  RuntimeError.java  Stmt.java
chapter 7/tool/: GenerateAst.java
chapter 8/: grammar.txt
chapter 8/lox/: Environment.java  Interpreter.java  Lox.java  Parser.java  Stmt.java
chapter 8/tool/: GenerateAst.java
chapter 9/: AstPrinter.java
chapter 9/lox/: Expr.java  Interpreter.java  Parser.java  Stmt.java
clox/: CMakeLists.txt  info.txt  out.txt  tags  test.c
clox/include/: common.h  memory.h  object.h  value.h
clox/include/chunk/: chunk.h
clox/include/compiler/: compiler.h
clox/include/debug/: debug.h
clox/include/hash/: hashtable.h
clox/include/scanner/: scanner.h
clox/include/vm/: vm.h
clox/src/: main.c  memory.c  object.c  value.c
clox/src/chunk/: chunk.c
clox/src/compiler/: compiler.c
clox/src/debug/: debug.c
clox/src/hash/: hashtable.c
clox/src/scanner/: scanner.c
clox/src/vm/: vm.c
jlox/chapter 1/challenge 3/include/: double-link-list.h
jlox/chapter 10/: grammar.txt
jlox/chapter 10/lox/: Expr.java  Interpreter.java  Stmt.java
jlox/chapter 10/tool/: GenerateAst.java
jlox/chapter 11/lox/: Interpreter.java  LoxFunction.java  Resolver.java
jlox/chapter 12/: grammar.txt
jlox/chapter 12/lox/: LoxCallable.java  Parser.java  Resolver.java
jlox/chapter 13/lox/: LoxClass.java  Scanner.java
jlox/chapter 2/lox/: Scanner.java
jlox/chapter 6/: grammar.txt
jlox/chapter 7/: grammar.txt
jlox/chapter 7/lox/: Interpreter.java  Lox.java
jlox/chapter 8/: grammar.txt
jlox/chapter 8/lox/: Expr.java  Interpreter.java  Lox.java
jlox/chapter 8/tool/: GenerateAst.java
jlox/chapter 9/: gen-ast.sh  grammar.txt
jlox/chapter 9/test-scripts/: simple-for.lox
jlox/chapter 9/tool/: GenerateAst.java
test-scripts/: broken.lox  class-method.lox  closure-test.lox  coffee-brew.lox  concat.lox  factorial.lox  fib-time-test.lox  garbage-collection.lox  scope.lox
